@@ -10,8 +10,13 @@ open-search-prototype=Search factory for selected object
 
 [mod-setting-name]
 fs-initial-zoom=Zoom level [img=info]
+fs-clear-highlights-with-gui=Clear highlights when closing interface [img=info]
+fs-highlight-duration=Highlight duration [img=info]
+
 [mod-setting-description]
 fs-initial-zoom=The zoom level to open results at. A larger value represents zooming further in.\nUsually between 0.3 and 3.\n[color=green]Default = 0.6[/color]
+fs-clear-highlights-with-gui=Removes highlight boxes and arrow when the interface is closed.\n[color=green]Default = Off[/color]
+fs-highlight-duration=Number of seconds that highlight boxes and arrow exist for.\n[color=green]Default = 12[/color]
 
 [search-gui]
 keep-open=Keep open
