@@ -2,6 +2,8 @@
 Version: 1.7.2
 Date: ???
   Features:
+    - Added 'Clear highlights when closing interface' setting to control whether the highlight boxes and arrow are removed when the interface is closed
+    - Added 'Highlight duration' setting to control the length of time that the highlight boxes and arrow exist for
     - Added 'Zoom level' setting to control initial zoom when viewing results
   Changes:
     - Default zoom level is now much less zoomed in
